Mon Jun  6 10:39:56 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/openssl_missing.h: Include ruby/config.h. r55285 added
	  some inline functions but VC does not recognize 'inline' keyword.

Mon Jun  6 09:25:34 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (thread_start_func_2): report raised exception if
	  report_on_exception flag is set.  [Feature #6647]

Mon Jun  6 01:36:24 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/extconf.rb: Check existence of SSL_is_server(). This
	  function was introduced in OpenSSL 1.0.2.
	  [ruby-core:75225] [Feature #12324]

	* ext/openssl/openssl_missing.h: Implement SSL_is_server() if missing.

	* ext/openssl/ossl_ssl.c (ssl_info_cb): Use SSL_is_server() to see if
	  the SSL is server. The state machine in OpenSSL was rewritten and
	  SSL_get_state() no longer returns SSL_ST_ACCEPT.

	  (ossl_ssl_cipher_to_ary, ossl_sslctx_session_get_cb): Add some
	  `const`s to suppress warning.

Mon Jun  6 01:18:10 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_asn1.c (decode_bool): Do the same thing as
	  d2i_ASN1_BOOLEAN() does by ourselves. This function is removed in
	  OpenSSL 1.1.0.
	  [ruby-core:75225] [Feature #12324]

Mon Jun  6 00:34:16 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/extconf.rb: Check existence of accessor functions that
	  don't exist in OpenSSL 0.9.8. OpenSSL 1.1.0 made most of its
	  structures opaque and requires use of these accessor functions.
	  [ruby-core:75225] [Feature #12324]

	* ext/openssl/openssl_missing.[ch]: Implement them if missing.

	* ext/openssl/ossl*.c: Use these accessor functions.

	* test/openssl/test_hmac.rb: Add missing test for HMAC#reset.

Mon Jun  6 00:00:13 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/openssl_missing.[ch]: Implement EVP_PKEY_get0_*() and
	  {RSA,DSA,EC_KEY,DH}_get0_*() functions.
	  OpenSSL 1.1.0 makes EVP_PKEY/RSA/DSA/DH opaque. We used to provide
	  setter methods for each parameter of each PKey type, for example